# swc_mut_cjs_exports

./: .gitignore  .rustfmt.toml  .swcrc  Cargo.toml  README.md  jest.config.cjs  package.json  pnpm-lock.yaml  rust-toolchain  rust-toolchain.toml
.cargo/: config
.github/workflows/: cron-latest.yml  cron-nightly.yml  cron.yml  publish.yml  swc-compat-test.yml  test.yml
__test__/case_10/: index.spec.ts  index.ts
__test__/case_10/children/: index.ts
__test__/case_8/: index.spec.ts  index.ts
__test__/case_9/: index.ts
__test__/issue_58/: input.spec.js
debug/: package.json
src/: lib.rs  local_export_strip.rs  utils.rs
tests/: test.rs
tests/fixture/case_1/: output.js
tests/fixture/case_10/: input.js  output.js
tests/fixture/case_11/: output.js
tests/fixture/case_2/: output.js
tests/fixture/case_3/: output.js
tests/fixture/case_4/: input.js  output.js
tests/fixture/case_5/: output.js
tests/fixture/case_6/: output.js
tests/fixture/case_7/: output.js
tests/fixture/case_8/: input.js  output.js
tests/fixture/case_9/: input.js  output.js
tests/fixture/issue_55/1/: output.js
tests/fixture/issue_55/2/: output.js
tests/fixture/issue_58/: input.js  output.js
tests/fixture/issue_78/: input.js  output.js
