[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "[SWC plugin] workaround for jest"
edition     = "2021"
homepage    = "https://github.com/magic-akari/jest_workaround"
keywords    = ["swc-plugin", "jest"]
license     = "MIT"
name        = "jest_workaround"
readme      = "README.md"
repository  = "https://github.com/magic-akari/jest_workaround"
version     = "0.72.6"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
indexmap = "1.9.3"
serde = "1.0.159"
swc_core = { version = "0.75.4", features = [
    "ecma_ast",
    "ecma_visit",
    "swc_plugin",
    "ecma_utils",
    "swc_atoms",
    "ecma_plugin_transform",
] }


[dev-dependencies]
swc_core = { version = "0.75.4", features = ["testing_transform"] }
testing  = "0.32.3"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = "debuginfo"
