[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "[SWC plugin] workaround for jest"
edition     = "2021"
homepage    = "https://github.com/magic-akari/jest_workaround"
keywords    = ["swc-plugin", "jest"]
license     = "MIT"
name        = "jest_workaround"
readme      = "README.md"
repository  = "https://github.com/magic-akari/jest_workaround"
version     = "0.78.19"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
indexmap = "2.0.0"
serde = "1.0.162"
swc_core = { version = "0.78.19", features = [
    "ecma_ast",
    "ecma_visit",
    "swc_plugin",
    "ecma_utils",
    "swc_atoms",
    "ecma_plugin_transform",
] }


[dev-dependencies]
swc_core = { version = "0.78.19", features = ["testing_transform"] }
testing  = "0.33.16"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = "debuginfo"
