[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "[SWC plugin] workaround for jest"
edition     = "2021"
homepage    = "https://github.com/magic-akari/swc_mut_cjs_exports"
keywords    = ["swc-plugin", "swc", "jest", "cjs", "commonjs"]
license     = "MIT"
name        = "swc_mut_cjs_exports"
readme      = "README.md"
repository  = "https://github.com/magic-akari/swc_mut_cjs_exports"
version     = "0.79.69"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
indexmap = "2.0.2"
swc_core = { version = "0.85.0", features = [
    "ecma_ast",
    "ecma_visit",
    "swc_plugin",
    "ecma_utils",
    "swc_atoms",
    "ecma_plugin_transform",
] }


[dev-dependencies]
swc_core = { version = "0.85.0", features = ["testing_transform"] }
testing  = "0.35.0"

[profile.release]
codegen-units = 1
opt-level     = "s"
strip         = "debuginfo"
